INDEX#HTML - defined a new class for identifying picker values STYLE#CSS - Style changes and added disabled class

--- a/index.html
+++ b/index.html
@@ -28,26 +28,26 @@
 				<div class="pickers">
 					<div id="picker_color" class="picker">
 						<label for="" class="picker-label">COLOR</label>
-						<a href="javascript:void(0);" onclick="updatePickers(this);" data-picker-type="color" data-picker-code="101">RED</a>
-						<a href="javascript:void(0);" onclick="updatePickers(this);" data-picker-type="color" data-picker-code="102">YELLOW</a>
-						<a href="javascript:void(0);" onclick="updatePickers(this);" data-picker-type="color" data-picker-code="103">BLUE</a>
-						<a href="javascript:void(0);" onclick="updatePickers(this);" data-picker-type="color" data-picker-code="104">GREEN</a>
+						<a class="picker-value" href="javascript:void(0);" onclick="updatePickers(this);" data-picker-type="color" data-picker-code="101">RED</a>
+						<a class="picker-value" href="javascript:void(0);" onclick="updatePickers(this);" data-picker-type="color" data-picker-code="102">YELLOW</a>
+						<a class="picker-value" href="javascript:void(0);" onclick="updatePickers(this);" data-picker-type="color" data-picker-code="103">BLUE</a>
+						<a class="picker-value" href="javascript:void(0);" onclick="updatePickers(this);" data-picker-type="color" data-picker-code="104">GREEN</a>
 					</div>
 					
 					<div id="picker_size" class="picker">
 						<label for="" class="picker-label">SIZE</label>
-						<a href="javascript:void(0);" onclick="updatePickers(this);" data-picker-type="size" data-picker-code="201">32</a>
-						<a href="javascript:void(0);" onclick="updatePickers(this);" data-picker-type="size" data-picker-code="202">34</a>
-						<a href="javascript:void(0);" onclick="updatePickers(this);" data-picker-type="size" data-picker-code="203">36</a>
-						<a href="javascript:void(0);" onclick="updatePickers(this);" data-picker-type="size" data-picker-code="204">38</a>
+						<a class="picker-value" href="javascript:void(0);" onclick="updatePickers(this);" data-picker-type="size" data-picker-code="201">32</a>
+						<a class="picker-value" href="javascript:void(0);" onclick="updatePickers(this);" data-picker-type="size" data-picker-code="202">34</a>
+						<a class="picker-value" href="javascript:void(0);" onclick="updatePickers(this);" data-picker-type="size" data-picker-code="203">36</a>
+						<a class="picker-value" href="javascript:void(0);" onclick="updatePickers(this);" data-picker-type="size" data-picker-code="204">38</a>
 					</div>
 					
 					<div id="picker_inseam" class="picker">
 						<label for="" class="picker-label">IN SEAM</label>
-						<a href="javascript:void(0);" onclick="updatePickers(this);" data-picker-type="inseam" data-picker-code="301">32</a>
-						<a href="javascript:void(0);" onclick="updatePickers(this);" data-picker-type="inseam" data-picker-code="302">34</a>
-						<a href="javascript:void(0);" onclick="updatePickers(this);" data-picker-type="inseam" data-picker-code="303">36</a>
-						<a href="javascript:void(0);" onclick="updatePickers(this);" data-picker-type="inseam" data-picker-code="304">38</a>
+						<a class="picker-value" href="javascript:void(0);" onclick="updatePickers(this);" data-picker-type="inseam" data-picker-code="301">32</a>
+						<a class="picker-value" href="javascript:void(0);" onclick="updatePickers(this);" data-picker-type="inseam" data-picker-code="302">34</a>
+						<a class="picker-value" href="javascript:void(0);" onclick="updatePickers(this);" data-picker-type="inseam" data-picker-code="303">36</a>
+						<a class="picker-value" href="javascript:void(0);" onclick="updatePickers(this);" data-picker-type="inseam" data-picker-code="304">38</a>
 					</div>
 				</div>
 			</div>
